--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,6 @@
 <body style="background-color: #071e26;justify-content: center;align-items: center;display: flex; margin: 0px;height: 100vh;">
  <div>
     <form id="loginForm">
-        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
         <p style="color: beige;font-size: 50px;font-weight: bold;margin: 0;">Login</p>
 
         <input type="text" id="user_name" name="user_name"  placeholder="user_name"><br><br>
@@ -16,6 +15,9 @@
         <input type="password" id="password" name="password"  placeholder="Password"><br><br>
         
         <button type="submit">Login</button>
+
+        <p id="responseMessage" style="color: red; margin-top: 10px;"></p>
+
         <a href="/forget-pass" class="forget-password">Forgot your password?</a>
         <p style="color: beige;">Don't have an account? <a href="/register">Register here</a></p>
 
@@ -25,12 +27,13 @@
 </body>
 
 <script>
+
     document.getElementById("loginForm").addEventListener("submit", async function(event) {
         event.preventDefault();
     
         const user_name = document.getElementById("user_name").value; 
         const password = document.getElementById("password").value;
-        const csrf_token = document.querySelector("input[name='csrf_token']").value;  // Get CSRF token
+      
 
         const requestData = { user_name, password };  // Debugging: Log request data
         console.log("Sending login data:", requestData);
@@ -39,7 +42,7 @@
                 method: "POST",
                 headers: {
                      "Content-Type": "application/json" ,
-                     "X-CSRFToken": csrf_token  // Send CSRF token in the header
+                    //  "X-CSRFToken": csrfToken // Send CSRF token in the header
                     },
                 body: JSON.stringify(requestData)  // Send username instead of email
             });
